# hybrid-proofs-dsl

./: .gitignore  README.md  cabal.project
hybrids/: CHANGELOG.md  LICENSE  hybrids.cabal
hybrids/src/: Hybrids.hs
hybrids/src/Data/: BitString.hs
hybrids/src/Data/Type/Nat/: Extra.hs
hybrids/src/Language/Hybrids/: AST.hs  Examples.hs  Latex.hs  Transform.hs
