cabal-version:       2.4

-- The name of the package.
name:                hybrids

version:             0.1.0.0

-- synopsis:
-- description:
-- bug-reports:

license:             MIT
license-file:        LICENSE
author:              Nes Cohen
maintainer:          nsar.cohen@gmail.com
copyright:           Copyright 2022 Nes Cohen
category:            Language
extra-source-files:  CHANGELOG.md

library
  -- Modules exported by the library.
  exposed-modules:     Hybrids
                     , Data.BitString

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.13.0.0
                     , containers
                     , type-combinators

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

